k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astra-backend
  labels:
    app: astra-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: astra-backend
  template:
    metadata:
      labels:
        app: astra-backend
    spec:
      containers:
        - name: astra-backend
          image: fieryice24/astra-backend-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/health # Assuming this is the health route. Adjust if needed.
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
