k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astra-api-service
  labels:
    app: astra-api
spec:
  type: LoadBalancer # Creates an AWS Classic/Network Load Balancer
  selector:
    app: astra-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
