k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astra-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /astra-api
            pathType: Prefix
            backend:
              service:
                name: astra-api-service
                port:
                  number: 80

          - path: /astra-rm
            pathType: Prefix
            backend:
              service:
                name: astra-rm-service
                port:
                  number: 80
